--- a/shared/game/theory/駆け引き.md
+++ b/shared/game/theory/駆け引き.md
@@ -14,3 +14,11 @@
 読み合いは暗黙的な交渉に近い。
 
 人に興味がないと読み合いに弱い。
+
+読み合いはまず太い択、合理的な択がベースで、相手が読んで裏をかくなら、自分はさらに裏の裏、というふうに読み合う。
+
+もっとも合理的な択を使えることと、相手のそれに対策できることが基本。
+読み合いを考えてない相手にはそれで勝てるし、よっぽど相手が読み勝つのでなければそれが一番勝率も上がる。
+問題は自分が最も合理的な択ばかりを選んだ場合に相手がそれに一点読みを合わせて裏をかいてくる場合。こちらは裏の裏にしないといけない。
+
+まずは一番太い択を見せて、相手の反応を見る。
