--- a/shared/intimacy/親しさ.md
+++ b/shared/intimacy/親しさ.md
@@ -185,3 +185,5 @@ https://gigazine.net/news/20170711-make-friends-scientific-method/
 intimacyは基本的に恋人に対して使われる表現で、友人にはあまり使わないっぽい。
 
 恋人とは親しくなるしかない。
+
+相手を知るのがまずはベースかも。
