--- a/shared/war/戦争.md
+++ b/shared/war/戦争.md
@@ -180,3 +180,5 @@ Lose-WinをLose-Loseに持ち込む。
 戦争で必要な能力はまず守備、次に継戦、最後に攻撃。敵の攻撃を防ぎ続けるだけでも相手に継戦能力がなければ勝てる。どちらも継戦能力があるなら相手の防御を抜かないと勝てない。
 
 王族や貴族同士の暗殺合戦なら民には影響しない。指導者の暗殺は最も平和的な戦争だ。
+
+争いと戦いは区別する。ConflictとBattleかな。
