--- a/shared/war/敵を作らない.md
+++ b/shared/war/敵を作らない.md
@@ -45,3 +45,5 @@
 敵を作らないためには、相手に損をさせないこと。特に名誉や信用を傷つけないこと。ただ、その上でこちらに弱みがあるなら損しない程度に搾り取る。
 
 戦争でもできるだけお互いの死傷者を減らす。恨みを買わないに越したことはない。ただ、生き残るために殺すこともある。
+
+殺すのではなく、倒す、生かして制圧するためには、自分が殺されないようにしないといけない。自分が殺されるようなら相手を生かす余裕はない。
