--- a/shared/information/情報.md
+++ b/shared/information/情報.md
@@ -198,3 +198,5 @@ https://share.google/qJIl8gO83xEZQZjbk
 本来は何度も通ってようやくわかる情報を、先に手に入れる。ただ、足で情報を集める楽しみというのもある。
 
 リスクを下げるということは、状態を確定させているということ。
+
+観測されるまで、状態が確定していない。
