--- a/games/Street-Fighter/Six/差し合いの距離.md
+++ b/games/Street-Fighter/Six/差し合いの距離.md
@@ -8,3 +8,10 @@
 - 遠距離 (38-45): 飛び道具の距離
 
 有利な間合いとは別に得意な間合いもある。
+
+次のように距離を定義する。
+
+1. 密着: 投げが届く
+2. 近距離: 打撃が届く
+3. 中距離: ジャンプ攻撃が届く
+4. 遠距離: 飛び道具しか届かない
