--- a/shared/intimacy/距離感.md
+++ b/shared/intimacy/距離感.md
@@ -55,3 +55,9 @@
 ただ、初めから距離感が近い人もいる。
 
 近すぎると傷つけ合い、遠すぎると孤独を感じる。
+
+心の距離と体の距離
+
+個人主義の強い国ではむしろ「個人主義だからこそ距離が近い」という話もあった。
+
+[【衝撃】フランス人の僕が、フランスには住みたくないと感じる瞬間 🇫🇷🇯🇵 - YouTube](https://www.youtube.com/watch?v=YbfoCYA8srw)
