--- a/shared/intelligence/知性.md
+++ b/shared/intelligence/知性.md
@@ -1,5 +1,7 @@
 # Intelligence
 
+知性、知能。
+
 習性を変える習性が知性。
 理性はブレーキなので、習性を意識的に変えるポイントで理性を働かせる。
 
@@ -127,3 +129,15 @@ IQの検査では以下の7項目に分けて検査する。
 
 感情的知能、社会的知能、なども考えられる。
 共感性とか社交性。
+
+知るだけじゃなくて、その情報をどう活用するかも考える。
+
+知的な能力。
+
+頭の回転が速くなるために改善するべきポイント:
+
+- 何かを聞いてから意味を理解するまでの早さ
+- 何かを聞いてから構造を理解するまでの早さ
+- 何かを聞いてから問いを思いつくまでの早さ
+- 問いを思いついてから答えを思いつくまでの早さ
+- 答えを思いついてから口に出すまでの早さ
