--- a/shared/intimacy/親しさ.md
+++ b/shared/intimacy/親しさ.md
@@ -187,3 +187,6 @@ intimacyは基本的に恋人に対して使われる表現で、友人にはあ
 恋人とは親しくなるしかない。
 
 相手を知るのがまずはベースかも。
+
+親しくなるということは、相手によって言動が変わるということでもある。
+相手の好みを知って店選びやプレゼントが変わったり、地元が同じならこちらも方言を使ったりする。
