--- a/shared/intimacy/距離感.md
+++ b/shared/intimacy/距離感.md
@@ -61,3 +61,5 @@
 個人主義の強い国ではむしろ「個人主義だからこそ距離が近い」という話もあった。
 
 [【衝撃】フランス人の僕が、フランスには住みたくないと感じる瞬間 🇫🇷🇯🇵 - YouTube](https://www.youtube.com/watch?v=YbfoCYA8srw)
+
+距離が近くなると、影響が大きくなる。
