--- a/shared/people/人を知る.md
+++ b/shared/people/人を知る.md
@@ -148,3 +148,12 @@
 哲学、
 歴史、
 展望、
+
+知るだけじゃなくて、その情報をどう活用するかも考える。
+
+相手の言動を予測する。
+相手の動きに合わせて支援する。
+相手の助けになる。
+相手の好みに合わせる。
+
+経済的に余裕がない人だとお金のかかるところには誘いづらい。
