--- a/shared/care/情.md
+++ b/shared/care/情.md
@@ -96,3 +96,6 @@ Mercy、情、情け、赦し、恵み。
 Careの視点で言うと、どこまでのおせっかいがちょうどいいか。あるいは上限などないのか。監禁して日常生活の全てを代わりにするのはやりすぎかどうか。まぁ、Careの観点はいいけど、Loveの観点では監禁するのはやりすぎ。基本的に現在の対象の価値を認めるのが愛。過不足はないと考えるべきで、何か支配しようとするなら愛ではない。
 
 世話好きで、お節介なのはCareの観点からすると良い。
+
+人との別れを引きずるべきかどうか。
+人が死んだ時に「そっか、死んだんか。おつかれィ！」って即切り替えるのも情がない。でも自分のことだけを考えたら、切り替えが遅れるとしんどい。悟りを得るとこういう情は無くなるので世俗から離れる。
