--- a/shared/entertainment/examples/racing/horse/馬券を買う.md
+++ b/shared/entertainment/examples/racing/horse/馬券を買う.md
@@ -28,3 +28,5 @@ UMACAやスマッピー専用機ならわりと空いてる。
 三連複を何種類か買う、
 三連単を何種類か買う、
 みたいな買い方がある。組み合わせる手もある。
+
+競馬では馬券が三連複までしかないので、4頭以上の組み合わせについてはボックス、フォーメーション、流しのような馬券を組み合わせる方法で買う。ただ、余計な馬券を多く買い込むことにもなるので、基本的には避けた方がいい。
