--- a/shared/singing/tips/歌のリズムを取る.md
+++ b/shared/singing/tips/歌のリズムを取る.md
@@ -91,3 +91,6 @@ BPM 150とかになるとまず8拍で手拍子するのが困難。腕もげる
 sの発音で、60bpmのメトロノームを鳴らしながら、半拍、1拍、2拍、4拍、2拍、1拍、半拍、と拍子に合わせて息を吐く練習。sはずっと鳴ったまま、アクセントをつける。リズム感と呼吸を同時に鍛える。
 
 下腹でリズムを取り続けないといけないので、ある程度持続力も必要。
+
+リズムの基本は下腹の筋肉で胸郭を太鼓のように叩くリズムで、息を支えてないと吐息になる。息を支えると息の圧が一時的に強くなってアクセントになる。
+4拍子なら1拍目で強く、3拍目で中くらいのアクセントをつけて、2、4拍目はその余韻で鳴らす。あるいは2、4拍目は息の支えだけで鳴らす。
