--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -142,3 +142,5 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 そもそも仕事以外では社交があまり求められてないのかも。親しい友達付き合いばかりが求められていて、細く長く関係を続けるのに関心がないとか。
 
 社交や親交において、どういう情報をやりとりするか。
+
+社交のためにあえて親交を避けるのはある。長く細く続けるためには、太く短く関係を深めると逆効果になることがある。
