--- a/shared/training/練習.md
+++ b/shared/training/練習.md
@@ -377,3 +377,6 @@ https://m.twitch.tv/videos/1991942489?desktop-redirect=true
 練習のベースとして、まず癖を抜く、「守」の工程が第一。
 
 練習していることはいつかできればいい。
+
+長く続けないといけない練習と、テクニックのために一時的にやる練習がある。
+重要度が高いのは長く続けないといけない練習。
