--- a/shared/breath/training/腹式呼吸の練習.md
+++ b/shared/breath/training/腹式呼吸の練習.md
@@ -8,3 +8,5 @@
 背中で支えながら下腹をポンプのように使って素早く息を吸ったり吐いたりする練習もする。
 
 肋間筋を始めから締めておけば胸式呼吸でそれ以上吐けない。腹式呼吸に慣れたら無駄なので必要ないけど、感覚を掴むだけなら使えるかも。
+
+腹式呼吸を鍛えるには、2秒間で一気に息を吸う。できるだけ早く強く吸う。肺がいっぱいになったと感じても2秒間は吸い続ける。特に、ペットボトルを咥えたり、手で筒を作って吸気を妨害したり、パワーブレスみたいな器具を使って負荷をかけたりするとさらに効果が高い。
