--- a/shared/cooking/recipes/meat/煮豚を作る.md
+++ b/shared/cooking/recipes/meat/煮豚を作る.md
@@ -18,3 +18,5 @@
 https://www.kyounoryouri.jp/recipe/15644_%E7%85%AE%E8%B1%9A.html
 
 塩分が足りないと水が抜けて肉が硬くなりやすい。
+
+豚バラを一口サイズに切って、脂がしっかり出て水分が飛んだ後に油だけ残って揚げ油みたいになるまで1時間煮込むような料理もある。
