--- a/shared/decision/疑い.md
+++ b/shared/decision/疑い.md
@@ -6,3 +6,6 @@
 疑ってもすぐに害するべきではない。まずは調査と観察。疑うということは、態度を保留すること。さらなる情報を集めて、態度を決めようとすること。
 
 ある事件で利益を得た人は疑わしい。
+
+英語だとdoubtは否定的な「〜ではないだろう」で、suspectは悪い方に肯定的な「〜かもしれない」で、ニュアンスが違う。
+doubtは確信や自信、confidenceの文脈。suspectは容疑や疑惑、嫌疑。日本語の「疑い」はsuspectが近い。
