--- a/shared/joke/ボケの例.md
+++ b/shared/joke/ボケの例.md
@@ -29,6 +29,7 @@
 - どぎつい偏見
 - 偉い人を雑に扱う
 - メタ発言
+- 無駄に遠回しに言う
 
 https://dekirukaiwajutu.com/category2/
 
@@ -83,3 +84,6 @@ https://dekirukaiwajutu.com/category2/
 「もしXXなら」で無茶苦茶な仮定をするボケ。
 
 通常なら安堵する場面で驚愕する、驚愕する場面で安堵する、といったボケ。真逆の反応をする。
+
+無駄に遠回しに言うボケ。
+「ミルクティーのミルク抜き」とか。
