--- a/shared/society/社交辞令.md
+++ b/shared/society/社交辞令.md
@@ -1,3 +1,11 @@
 社交辞令であっても、誘ったり誘われたりするなら、乗っかってもいい。関係を切りたいとまで思わないならとりあえず社交辞令を言っておくし、乗っておく。しかし、関係を切りたいなら言わない。
 
 社交辞令で「また会おう」とか「また誘ってくれ」とか言っておくと、相手から誘いやすくなるので接触の機会が増える。
+
+言えば言うほどいいことは？
+
+社交で伝えること
+
+- また会おう
+- いつでも誘ってくれ
+- また誘ってもいいか
