--- a/shared/intimacy/tips/共通点を探る.md
+++ b/shared/intimacy/tips/共通点を探る.md
@@ -2,13 +2,29 @@
 
 ## よくある共通点
 
-- 名前に含まれる字
-- 出身地
+- 名前
+  - 同じ苗字や名前
+  - 含まれる漢字
+- 民族
+- 言語
+- 出身
+- 年齢
+- 外見
+  - 顔のパーツ
+  - 体格
+  - 筋肉
+- 誕生日
+- 使っているもの（化粧品とか）
+- 習慣
+- 信仰
+- 仕事
+- 特技や技術
+- 趣味やこだわり
+- 好き嫌い
+- 失敗の経験
+- まとっている雰囲気
+- 病気や怪我
 - 血液型
-- 誕生日の月
-- 誕生日の日
-- 誕生日の曜日
-- 好きなもの
 
 ## その他
 
