--- a/shared/love/愛.md
+++ b/shared/love/愛.md
@@ -952,3 +952,5 @@ loveとgoodの概念は近い。
 愛には影響力がある。workではないけど、他人の好きなものを好きになったりする。
 
 恋人が欲しいとか、友人が欲しいとか、何か結果を求めているうちは愛ではないのかも。用。
+
+好きの前に興味がある。興味深いものの中でさらに近づきたいものを好きと考える。
