--- a/shared/work/環境.md
+++ b/shared/work/環境.md
@@ -6,3 +6,5 @@ https://newsdig.tbs.co.jp/articles/-/386361
 サッカーチームにいても野球は上手くならない。
 
 「今いる環境の中で好きなことをするんじゃなくて、好きなことを主軸に環境をつくる」『オカルトちゃんは語れない』
+
+「カスすぎる環境を与えられると人はハックを始める」（ゆるコンピュータ科学ラジオ）
