--- a/shared/technology/engineering/工業.md
+++ b/shared/technology/engineering/工業.md
@@ -1,12 +1,16 @@
 # 工業
 
-製品や生産がベース。開発とも関連がある。
+industry
+
+製品や生産がベース。開発とも関連がある。特に設計の工程。仕組みづくり。
 
 工業の方向性としては以下のような要素がある。
 
-- 品質を揃える、安定させる
-- 生産を早める
-- 経費を抑える
+- より安定した品質で作る、品質を揃える
+- より早く作る
+- より安く作る
+- より単純な工程で作る
+- より入手しやすい材料で作る
 
 品質そのものは工業の要素というよりもものづくり全般で、工芸でも同じだけど、品質を安定させるのは工業の役割。
 
@@ -20,3 +24,5 @@ engineeringはproductionやdevelopmentの中でも特に科学的な手法を用
 量産された、という意味で manufactured product と呼ぶこともある。
 
 蒸気機関やエンジンは完全に密閉されて圧力を生み出せる溶接技術と高められた圧力に耐えられる強度のある素材や溶接技術が必要。
+
+同じような技術でも、より安価な方法、より手に入れやすい素材で作る方法は工業的に価値がある。
