--- a/shared/communication/media/language/言葉にする.md
+++ b/shared/communication/media/language/言葉にする.md
@@ -13,9 +13,22 @@
 
 ニュースの内容を整理して、人に説明する練習。
 
-- 対象、何が書かれているか (What)
-- 意見、それを見てどう思ったか (So what)
+- 対象、何について書かれているか (What)
+  - どんな事件について書かれているか
+- 意見、印象、感想、それを見てどう思ったか (So what)
+  - 自分はどう思ったか
+  - 記者はどう思って書いたと考えられるか
 - 根拠、どうしてそう思ったか (Why)
+  - 自分はどうしてそう思ったか
+  - 記者はどうしてそう思ったか
+- 事象、観測した結果、どうなっているか (How)
+  - どんな文字で書かれているか
+  - どんな文体で書かれているか
+  - どのような語彙で表現されているか
+- 誰が書いたものか (Who)
+- いつ書かれたものか (When)
+- どこで書かれたものか (Where)
+- 誰に向けて書かれたものか (Whom)
 
 映画やアニメを見る、本や記事を読む、などして、意見を持つことから始めてみる。
 
