--- a/shared/thinking/連想.md
+++ b/shared/thinking/連想.md
@@ -50,3 +50,10 @@
 「病」「事故」のような類似を連想したりする。
 
 「田舎のヤンキー」と言えば「コンビニの前で屯する」という連想だけでなく、「屯する」と言えば「田舎のヤンキー」といった逆引きでも連想できると幅が広がる。
+
+どんなものを連想するか。
+
+連想の中でも、近いものと遠いものがある。
+例えば、「カレー」だったら「黄色い」とか「茶色い」とか抽象的すぎる連想よりは、「美味しいカレー屋」とか、料理好きなら「好きなカレールーのメーカー」とか、定番の料理繋がりで「ラーメン」とか、インド料理で「ビリヤニ」とかの方が近い。
+
+会話とかの高速なやり取りが必要な場面では、抽象的な連想よりも具体的な連想が多く出てくる方が便利。
