--- a/shared/care/responsibility/責任.md
+++ b/shared/care/responsibility/責任.md
@@ -132,3 +132,6 @@ https://youtu.be/TH0ZiPNkddQ?si=ejD2IH1dFfaVBjmv
 劣った人を避けるのは、他責というよりその前の段階。責任が取れるレベルにない人を排除する。あとで「あいつのせいで失敗した」と言うのは誰でもできる。
 
 本当にやりたいことがあったら、自分でやる。
+
+責任は情やエンゲージメントとの関連もある。
+責任は基本的に自分の話なんだけど、エンゲージメントでは家族や恋人にも責任を広げる。
