--- a/shared/work/力.md
+++ b/shared/work/力.md
@@ -39,3 +39,6 @@ https://chat.openai.com/share/95eec5c2-1411-4c14-a703-3e3b9e9f8ab9
 workにおける力はforceというよりenergyかも。動力、エネルギー、エナジー。
 
 戦いや狩りは力の領分。
+
+performanceもworkと関連かも。力を使うだけじゃなくて、効率的に使う。
+より少ない力で、より大きな作用。
