--- a/shared/cooking/火加減.md
+++ b/shared/cooking/火加減.md
@@ -37,3 +37,5 @@ https://www.fsc.go.jp/foodsafetyinfo_map/shokuhniku_teionchouri.html
 火加減は結局水分量のコントロールでもある。それだけではないけど。
 
 水分量が少ないとパサパサして食感が悪い。味も落ちる。
+
+英語だと同じ煮物でも、弱火でコトコトと沸騰させないように煮るのがsimmer、ぐつぐつと長時間煮るのがstewと分かれている。
