--- a/shared/engagement/エンゲージメント.md
+++ b/shared/engagement/エンゲージメント.md
@@ -333,3 +333,5 @@ engagementはcommunicationや trustと関わりが深い。
 組織や国家のように曖昧なものにエンゲージメントを向けるのは難しい。だからこそ、「人」が旗印にならないといけない。
 
 エンゲージメントとか、参加させる、という概念は、リソースを割かせる、責任を負わせる、ということ。
+
+エンゲージメントとは、責任の範囲を自分の外に広げること。
