--- a/shared/engagement/愛着.md
+++ b/shared/engagement/愛着.md
@@ -1,5 +1,7 @@
 # Attachment
 
+愛着、帰属意識。
+
 愛着を持つことで、それ以外のモチベーションにもなる。
 「趣味のために仕事を頑張ろう」とか。
 
@@ -42,3 +44,5 @@
 愛着を育てるには？
 
 愛着がないと、「頼られてるから辞めない」ってことがない。頼られていても自分にとって価値がなくなったら辞める。だから、最悪の事態の時に信頼できない。
+
+ある種の責任感。
