--- a/shared/intelligence/知性.md
+++ b/shared/intelligence/知性.md
@@ -33,14 +33,19 @@ learning, thinking, training あたりは知性の関連だと思う。
 
 さまざまな知性
 
-ユーモア、応用できる
-クレバー、役にたつ、利口
-知識が多い
-処理が早い
-複雑なものを扱える
-他人に説明できる、言語化できる
-想像力
-理解力
+- クレバー、役にたつ、利口
+- 知識が多い
+- 処理が早い
+- 複雑なものを扱える
+- 他人に説明できる、言語化できる
+- 想像力
+- 理解力
+- 応用力
+- 知ろうとすること (好奇心、関心)
+- 受け入れること (ユーモア)
+- 観察力
+- 注意力
+- 集中力
 
 同じものを違うように見る、違うものを同じように見るのは知性が低い。
 
