--- a/shared/communication/表現.md
+++ b/shared/communication/表現.md
@@ -12,3 +12,5 @@ description は視覚的なイメージを想起させる表現。
 良い、悪い、というのは抽象的すぎるので、どう良いのか、どう悪いのか、まで言葉にする。
 
 内容がアレだと表現ではどうにもならないこともある。
+
+表現が変わっても、そもそもの思想が変わってないこともある。
