--- a/shared/society/噂.md
+++ b/shared/society/噂.md
@@ -3,5 +3,9 @@
 自分でも相手でもない誰かの話。
 世間の評判、風説、伝聞。
 
+噂は本人に伝わる。
+
 第三者に話したことが本人に伝わることもある。
 本人がいないところで誰かの話をするときは、本人に伝えられてもいいことだけを話すべき。
+
+本人に伝わることを前提に陰口を叩く人はヘタレ。
