--- a/shared/decision/判断基準.md
+++ b/shared/decision/判断基準.md
@@ -6,8 +6,10 @@
 
 重要な判断基準:
 
-- 健康を損なうかどうか
-- 死ぬかどうか
+- 不可逆性: 戻せるかどうか
+  - 壊れてもすぐ直せるかどうか
+  - 健康を損なうかどうか
+  - 死ぬかどうか
 
 「より楽しい」を判断の重要な指標に据える。夢中になれることを優先する。これがより手間や時間をかけることにもつながる。
 
