--- a/shared/health/tips/風邪を治す.md
+++ b/shared/health/tips/風邪を治す.md
@@ -116,3 +116,8 @@
 風邪のときは栄養をしっかり摂るけど、脂肪は要らない。プロテインとかウィダーで栄養をカサ増しするのもいい。
 
 落ち着いたら片っ端から触ったものを取り替えたりアルコールで処理していく
+
+風邪の初期症状には葛根湯か、銀翹散でもいい。
+喉の痛みがある場合は葛根湯を避ける。
+
+葛根湯は体を温める感じの薬なので、炎症にはむしろ悪い時がある。喉の痛みとか。
