--- a/shared/health/tips/風邪を治す.md
+++ b/shared/health/tips/風邪を治す.md
@@ -34,6 +34,12 @@
 - ワセリン（鼻の肌荒れを防ぐ）
 - 冷えピタや氷枕
 
+## 風邪の初期症状
+
+漢方の世界では、風邪に風温と風寒の二種類がある、と考えられている。
+よくある風邪は風寒で、寒気がする風邪。
+対して、発熱や炎症が強く出て、体が消耗するのが風温。
+
 ## 風邪が治ったら
 
 - 触ったところをアルコール消毒する
@@ -118,6 +124,8 @@
 落ち着いたら片っ端から触ったものを取り替えたりアルコールで処理していく
 
 風邪の初期症状には葛根湯か、銀翹散でもいい。
-喉の痛みがある場合は葛根湯を避ける。
+鼻や喉の痛みがある場合は葛根湯を避ける。
+銀翹散は鼻や喉の痛みに特化していて、体に優しい。
 
-葛根湯は体を温める感じの薬なので、炎症にはむしろ悪い時がある。喉の痛みとか。
+葛根湯は血流を良くして体を温めるタイプの薬なので、炎症にはむしろ悪い時がある。喉の痛みとか。
+熱や痛みが強い場合は使わない方がいい。
