--- a/shared/game/theory/駆け引き.md
+++ b/shared/game/theory/駆け引き.md
@@ -22,3 +22,5 @@
 問題は自分が最も合理的な択ばかりを選んだ場合に相手がそれに一点読みを合わせて裏をかいてくる場合。こちらは裏の裏にしないといけない。
 
 まずは一番太い択を見せて、相手の反応を見る。
+
+裏をかかないといけないのは相手の読みが強いときだけ。ただ、相手の読みがどの程度か判断するのは難しい。まずは裏をかくとまではいかなくとも直線的でなく、相手の読みが悪くても情勢が悪くはならない手から選ぶ。
