--- a/shared/collaboration/organization/hierarchy/指揮.md
+++ b/shared/collaboration/organization/hierarchy/指揮.md
@@ -1,6 +1,6 @@
 # 指揮
 
-Conduct
+Conduct, Command
 
 「指揮」とはタイミングを合わせること。
 
@@ -32,3 +32,5 @@ Conduct
 
 上司は、その上司より下の上司が全員同じ指示を出すように指示を一貫させる。下の上司をクビにしたり、教育したり。いちいちズレていると判断が遅れる。
 指示が一貫してないということは、下の上司が上の上司の指示を聞いていないということ。上司が指示を聞いてないのに部下が指示を聞くわけがない。
+
+指揮はより早い判断、ひいては行動のためにある。集団の動きを早くするために指揮を取る。指揮系統があっても動きが遅いなら統治に失敗している。
