--- a/shared/government/統治.md
+++ b/shared/government/統治.md
@@ -3,3 +3,7 @@
 
 統治には仕組みが必要。
 ヒエラルキーは代表的だけど、ヒエラルキーだけが統治機構ではない。ヒエラルキーはサルでも考えられる統治機構ではある。
+
+トップダウンの統治は基本的にヒエラルキー。
+
+日本みたいに和を乱すまでは優しいけど和を乱したら殺すって統治の仕方はボトムアップの統治。共同体の練度が高くないとできない。
