--- a/shared/business/客.md
+++ b/shared/business/客.md
@@ -17,3 +17,8 @@
 全ての客を大事にする必要はない。
 
 ウィンウィンな関係は、客より友と呼ぶべきか。
+
+世の中には泥水みたいな人もいるので、そのまま飲むのはしんどい。ある程度フィルターしたい。
+それをしないのが配信者とか、接客業とか。人類をフィルターしない、という価値。
+
+客というよりも餌として割り切って搾り尽くした方がいい相手もいる。相手がこちらに敬意を持ってないとか。
