--- a/shared/finance/tips/楽に稼ぐ.md
+++ b/shared/finance/tips/楽に稼ぐ.md
@@ -9,3 +9,7 @@
 
 自分で働くだけでは稼ぐにも限度がある。
 大きく稼ぐなら、資産を持って、自分が働く以外の方法で稼がないといけない。
+
+世の中にはめんどくさい仕事とめんどくさい人間があって、どっちかは相手にしないと稼げないことが多い。
+フェミみたいに男嫌いの気持ち悪い女を餌にするとか、もこう先生やうんこちゃんみたいに女嫌いの気持ち悪い男を餌にするとか、そういうのはめんどくさい人間を相手にしている。めんどくさい人間を食べたくないグルメな人はそういうビジネスはしない。でも泥水を泥水のまま飲むような行為で、別に手間はかからない。泥水をそのまま飲む人は少ないので供給が少ない。
+めんどくさい仕事は手順が複雑で手間がかかる。根気が必要だけど、人は選べる。なんなら客もめんどくさかったら相手にしなくていい。まぁ、泥水を飲める人を営業に置いてどっちも取るのが一番いいけど。
