--- a/shared/intimacy/tips/誰かと親しくなる.md
+++ b/shared/intimacy/tips/誰かと親しくなる.md
@@ -173,3 +173,5 @@
 共通点があれば、相手を知るのと同時に、自分も知ってもらえる。
 
 できれば自分を知ってもらうための話をする。相手と共通点がありそうな話を振る。
+
+親しくなってきたら、親しい間柄だと思っていることを相手にも言外に伝えるべき。敬語をやめてみるとか、愛称で呼んでみるとか、一緒にどこか出かけないか誘ってみるとか。
