--- a/shared/singing/歌の呼吸.md
+++ b/shared/singing/歌の呼吸.md
@@ -2,6 +2,8 @@
 
 ブレス
 
+息継ぎとしての呼吸と、表現としての呼吸がある。
+
 そもそも息が足りないと力を入れて息を吐かないといけないので、ブレスは大事。
 
 ブレスは決まった位置で入れる。
@@ -65,3 +67,5 @@ https://youtu.be/YWMxHOMn9i8?si=2tfK9VY3UnzxZne-
 腹で息の圧をかけて息を細く強く吐ければ、喉を締めたシャウトやがなり、エッジボイス、ホイッスルボイスも楽になる。息の量を調整できないと喉を締めた時に喉を痛めやすい。
 
 歌っている間は基本的に軟口蓋を閉じて鼻に息を通さないので、息を吸うときも口から吸う。余裕がある時だけ鼻から吸う。
+
+歌だと胸式呼吸で吐く力よりも腹式呼吸で吸う力の方が重要なので、風船とか膨らませる訓練はあまり効果がない。
