--- a/shared/achievement/実績.md
+++ b/shared/achievement/実績.md
@@ -180,3 +180,6 @@ executionの積み重ね。個々の実行はexecutionとして考える。
 実績は将来の期待値を測る物差しでもある。
 
 上司にも部下にも顧客にも仕事に見通しを持たせる、終わりを予測できるようにすることは重要。
+
+肩書きも実績ではある。
+「元XX」みたいな肩書きは実績にはなるけど、もう実力としても肩書としても機能してない。
