--- a/shared/intimacy/tips/誰かと親しくなる.md
+++ b/shared/intimacy/tips/誰かと親しくなる.md
@@ -1,3 +1,14 @@
+## 親しくなるまでの過程
+
+1. 相手を好きになる
+2. 興味を持ってもらう
+3. 知ってもらう、覚えてもらう
+   1. 接触の機会を増やす
+4. 好きになってもらう（相手からも近づいてもらう）
+5. 親しくなる
+
+## その他
+
 どうなってもいい人と会う機会を作って練習する。
 
 人と親しくなるにはまず似ているところや共通点を探す。観察と会話で。
@@ -175,3 +186,11 @@
 できれば自分を知ってもらうための話をする。相手と共通点がありそうな話を振る。
 
 親しくなってきたら、親しい間柄だと思っていることを相手にも言外に伝えるべき。敬語をやめてみるとか、愛称で呼んでみるとか、一緒にどこか出かけないか誘ってみるとか。
+
+親しくなるためには、好かれないといけない。相手からも近づいてもらわないと基本的に人間は距離をとりたがる。
+
+好かれる前に興味を持ってもらう。
+
+学校や職場、サークル、などの場所では、興味のない人とも顔を合わせるうちに挨拶したりして多少は親しくなる。
+
+まず接触の機会を増やすのが先で、それから距離を詰めること。
