--- a/shared/sex/恋の話題.md
+++ b/shared/sex/恋の話題.md
@@ -1,3 +1,5 @@
+恋バナ。
+
 - 恋人に外せない条件は？
 - 見た目が好きな有名人は？
 - 恋人にするならどんな人か？
@@ -5,3 +7,10 @@
 - 恋人に直してほしいところ
 - もし恋人だったら嫌なところ
 - セクシーだと思う人は？
+
+同性同士の恋バナなんかは、お互いに恋人が欲しいっていう愚痴みたいなものかも。
+恋人がいる人の惚気は仲のいい友達くらいしか聞きたくない。
+あるいは誰か紹介してもらえるのを期待しているのかも。
+
+恋バナをすることで、恋人が欲しい、ということを表明できる。
+友人に紹介してもらったり、誰かからアプローチされたりする機会が増えるかもしれない。
