--- a/shared/voice/training/tips/高い声を出す.md
+++ b/shared/voice/training/tips/高い声を出す.md
@@ -9,6 +9,16 @@
 - 声帯が小さい (男性より女性の方が小さい)
 - 声道が短い (≒ 身長が低い)
 
+## 声を高くする方法
+
+1. 声帯を伸ばす
+2. 息を強くする: 声が強くなる
+3. 軟口蓋を上げる: 声が明るくなる
+4. 喉を上げる: 響きが弱くなって声が硬くなる
+5. 声帯を硬くする: 響きが弱くなって声が硬くなる
+
+声帯を伸ばす以外の方法には副作用があるので、表現によって使い分ける。
+
 ## その他
 
 高い声は練習で出せるようになる。
