--- a/shared/lifestyle/clothing/着こなし.md
+++ b/shared/lifestyle/clothing/着こなし.md
@@ -5,3 +5,5 @@ WEAR や ZOZOTOWN で着こなしを観察するのもいい。
 服はまず、時期、場所、場合、に合わせる。
 例えば、季節や気温、湿度、天気、国や地域、民族、冠婚葬祭などのイベント、相手の立場、など。
 冬に夏の格好とか、リラックスする場所にスーツとか、間違っていると変。
+
+特定の目的の服装としてはoutfitも使う。服装そのもの。特に一揃えの服。セットアップ。
