--- a/shared/achievement/project/プロジェクト.md
+++ b/shared/achievement/project/プロジェクト.md
@@ -100,3 +100,8 @@
 大きな作業をきちんと終えるためにはプロジェクトを管理しないといけない。
 
 作業自体はachievementやexecutionの考え方。
+
+- ステークホルダーは何を達成したいのか
+- ステークホルダーはどんな状況にいるのか
+- ステークホルダーが重視するのはどんな価値か
+- タスク全体でどんな意味があるのか
