--- a/shared/family/children/親子.md
+++ b/shared/family/children/親子.md
@@ -9,3 +9,7 @@
 子から借りたら倍返し。弟子や部下も。
 
 子どもが多くて育児や抱卵をしない動物ほど親と子でいうと親が生き残った方がまたたくさん子どもが生めるので見捨てやすい。逆に育児や抱卵に手間がかかるほど子どもを必死で守る。
+
+安全基地になれない親は精神的に未熟。
+
+精神的に未熟なのに子供を産んでしまうのは親子ともに不幸。
