--- a/shared/family/children/親離れ.md
+++ b/shared/family/children/親離れ.md
@@ -1,2 +1,8 @@
 反抗期があるのは反抗が許されるからという面もある。
 虐待されていると反抗期になるのも難しい。
+
+親であっても毒になるなら切り捨てないといけない。
+
+小さな頃は親が世界の全てのように見えるけど、小学校、中学校と多くの人に触れていく中で、親も普通に間違っていることに気づく。
+
+基本的に、親は子よりも早く死ぬ。
