--- a/shared/human/mind/精神.md
+++ b/shared/human/mind/精神.md
@@ -31,3 +31,9 @@ mindは気にかけるもので、基本的に煩わしいものだ。
 何かを思う、意識するのがmind。
 
 精神の対義語は肉体。body.
+
+精神的に未熟な人の特徴としては、
+
+- 一度持った考えを変えられない (思考していない)
+- ストレスに弱い
+- 最も楽な道だけを選ぶ
