--- a/shared/society/tips/褒め言葉を受け取る.md
+++ b/shared/society/tips/褒め言葉を受け取る.md
@@ -1,4 +1,8 @@
-まずは「ありがとう」でいい。
+まずは笑顔で「ありがとう」でいい。
+
+- 嬉しいよ
+- 気分がいいよ
+- すごく練習したんだよ
 
 褒めてくれることに感謝する。
 
@@ -19,3 +23,7 @@
 自分が「どう褒められたいか」を考えると、自分が目指している方向性を捉えられる。
 
 あんま自分が関心を持ってない部分を褒められてもピンとこない。
+
+褒められたら、相手のことも褒めるといい。
+ただ、まずは褒め言葉を受け取ってから。褒め言葉を否定しない。
+何にもなかったら「褒めるのが上手だね」でもいい。
