--- a/shared/intimacy/誰かと親しくなる.md
+++ b/shared/intimacy/誰かと親しくなる.md
@@ -194,3 +194,6 @@
 学校や職場、サークル、などの場所では、興味のない人とも顔を合わせるうちに挨拶したりして多少は親しくなる。
 
 まず接触の機会を増やすのが先で、それから距離を詰めること。
+
+誰かと親しくなるための36の深い質問。
+https://www.total-marriage.com/column/1644/
