--- a/shared/care/tips/情を示す.md
+++ b/shared/care/tips/情を示す.md
@@ -1,6 +1,12 @@
 - 関心を示す
+  - 相手の話をよく聞く
+  - 相手の話を覚えている
 - 注意を払う
-- 丁寧に扱う
+  - 変化に気づく
+    - 前回会った時の相手の姿や言動を覚えている
+- 敬意を示す
+- 好意を示す
+  - 笑顔で明るく声をかける
 - 相手に合わせる
 
 手間や時間をかけることで情を示す。
