--- a/shared/communication/media/language/言葉にするべきもの.md
+++ b/shared/communication/media/language/言葉にするべきもの.md
@@ -1,23 +1,28 @@
-- 意見
-  - 評価（どう思ったか）
+- 事象
+  - 何があったか
+    - 人物
+    - 風景
+  - いつか
+  - どこにいたか
+  - 誰と一緒にいたか
+- 解釈
+  - どのように理解したか
+  - どのように解釈したか
+- 意見・感想
+  - 印象（どう思ったか）
+  - 評価（どれくらいの価値があるか）
     - 好き
     - 興味がある
     - 面白い
     - 美味しい
   - 根拠（どうしてそう思ったか）
-- 体験
-  - 何があったか
-  - いつか
-  - どこにいたか
-  - 誰と一緒にいたか
 - 抱負
-- 風景
-- 時事
-  - 天気
-  - 政治
-  - 経済
-    - 景気がいい
 - 知識
+  - 時事
+    - 天気
+    - 政治
+    - 経済
+      - 景気がいい
   - 構造
   - 法則
 - 感覚
