--- a/shared/society/tips/人を覚える.md
+++ b/shared/society/tips/人を覚える.md
@@ -4,13 +4,18 @@
 
 関心を持つために想像する。
 
-顔を覚えるために、顔を見て話す。
+顔を覚えるために、顔を見て名前を呼ぶ。
 
 主な観点:
 
+- 顔
 - 性別（男か女か）
-- 年代
-- 背の高さ
+- 年齢・年代
+- 出身
+- 仕事
+- 趣味
+- 好き嫌い
+- 身長
 - 体格（太っているか、痩せているか）
 - 声の高さ
 - 肌の色（濃いか、薄いか）
