--- a/shared/intimacy/親交.md
+++ b/shared/intimacy/親交.md
@@ -3,3 +3,6 @@
 社交と違って、親交では短く太く付き合う前提がいいのかも。別れがあることを受け入れる。
 
 親しい人と付き合ってばかりで社交に全く興味がないのも問題がある。
+
+親交でもコミュニケーションは重要だけど、手段でしかない。
+その先で、相手に影響を与えて、自分も相手の影響を受けるのが最大の目的。距離が近いほどお互いに与え合う影響も大きくなる。
