--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -146,3 +146,6 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 社交のためにあえて親交を避けるのはある。長く細く続けるためには、太く短く関係を深めると逆効果になることがある。
 
 社交はあくまでも社会が相手で、個人と親しくなったりするのは方向性が違う。
+
+社交は円滑なコミュニケーションが目的。
+情報のやり取りをするための土台。
