--- a/shared/intimacy/親交.md
+++ b/shared/intimacy/親交.md
@@ -6,3 +6,10 @@
 
 親交でもコミュニケーションは重要だけど、手段でしかない。
 その先で、相手に影響を与えて、自分も相手の影響を受けるのが最大の目的。距離が近いほどお互いに与え合う影響も大きくなる。
+
+悪意を持って近づいてくる人もいる。
+必ずしも好意だけが原動力ではない。
+
+親しくなることで、お互いの影響力を高め合っている。
+
+好意が見えないのに近づいてくるのはちょっと怖い。
