--- a/shared/love/tips/愛を示す.md
+++ b/shared/love/tips/愛を示す.md
@@ -8,20 +8,22 @@
 - 目を向ける
 - 目を合わせる
 - 微笑みかける
+- 手を振る
+- 話しかける
+- 褒める
 - 体を近づける
   - 近くの席に座る
-- 体を触る
-- 話しかける
-- 手を振る
 - 電話やメールで連絡する
-- デートに誘う
-- 褒める
-- 口説く
-- 贈り物をする
 - 変化に気づいて指摘する
-- 振る舞いが似てくる、癖が移る
+- 贈り物をする
 - 相手の言葉を拾う
+- 振る舞いが似てくる、癖が移る
+- デートに誘う
+- 体を触る
 - 言葉で愛を伝える
+- 口説く
+
+## その他
 
 愛を示す、好意を示す。
 
