--- a/shared/intimacy/距離感.md
+++ b/shared/intimacy/距離感.md
@@ -63,3 +63,5 @@
 [【衝撃】フランス人の僕が、フランスには住みたくないと感じる瞬間 🇫🇷🇯🇵 - YouTube](https://www.youtube.com/watch?v=YbfoCYA8srw)
 
 距離が近くなると、影響が大きくなる。
+
+距離は結構重要な概念。時間とも空間とも関連する。
