--- a/shared/politics/争い.md
+++ b/shared/politics/争い.md
@@ -83,3 +83,5 @@ https://twitter.com/5ducks5/status/1504980931223818244
 仲がいいのに表面上は争うのも、むしろわだかまりがないからこそできること。プロレス。
 
 争いがあるのが敵。
+
+争いは、争い自体に余計なリソースを持っていかれる。無いなら無い方がいい。
