--- a/shared/sex/恋の話題.md
+++ b/shared/sex/恋の話題.md
@@ -7,6 +7,7 @@
 - 恋人に直してほしいところ
 - もし恋人だったら嫌なところ
 - セクシーだと思う人は？
+- 男女間の友情はあると思うか
 
 同性同士の恋バナなんかは、お互いに恋人が欲しいっていう愚痴みたいなものかも。
 恋人がいる人の惚気は仲のいい友達くらいしか聞きたくない。
