--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -149,3 +149,6 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 
 社交は円滑なコミュニケーションが目的。
 情報のやり取りをするための土台。
+
+社交は人と会う中で最低限。
+連絡をこまめに取るとか、社会の一員として周りに迷惑をかけないとか、助け合うとか。
