--- a/shared/love/愛.md
+++ b/shared/love/愛.md
@@ -954,3 +954,5 @@ loveとgoodの概念は近い。
 恋人が欲しいとか、友人が欲しいとか、何か結果を求めているうちは愛ではないのかも。用。
 
 愛の前に情、好きの前に興味や注意がある。興味深いものの中でさらに近づきたいものを好きと考える。
+
+好きだから体験を共有して近づきたいのかもしれない。
