--- a/shared/war/武力を示す.md
+++ b/shared/war/武力を示す.md
@@ -19,3 +19,8 @@
 武力は使ったらコスパが悪いし、持たないと侵略されても文句は言えない。
 
 武力はコスパが悪くて使いたくないが、いざというときは使わないと相手に恐怖を与えられない。刺す時には刺す、撃つ時には撃つ、と本気で思われてこそ恐怖を与えられる。
+
+恨みを買わずに恐怖を与えるには、「負けを認めさせる」のが大事。
+卑怯な手段を使うと負けを認めさせるのが難しくなる場合がある。暗殺なんかも同じ。
+
+負けを認めさせないと泥沼になる。争いはない方がコスパがいい。
