--- a/shared/cooking/recipes/side/浅漬けを作る.md
+++ b/shared/cooking/recipes/side/浅漬けを作る.md
@@ -18,3 +18,6 @@
 ## メモ
 
 - https://www.sirogohan.com/recipe/tukemono-kihon/
+
+白菜の浅漬けのアレンジ
+https://youtube.com/watch?v=VT7TdS-s6PY&si=JSEHsDeOUeyWYyIJ
