--- a/shared/people/人を知る.md
+++ b/shared/people/人を知る.md
@@ -4,9 +4,14 @@
   - 状態
   - 反応
   - 刺激
+- 本人からその人の話を聞く
 - 誰かからその人の話を聞く
 
 といった方法がある。
+
+人を知るには、まず基本情報から。
+最低限名前は必要として、質問というよりは服装などから推測する。経済状況や健康状態、社交性、社会性、とか。食事の場だったら好きなものとか。あと趣味とか好きなこととか。
+仕事は知らなくても別にいい。ただ、一緒に出かけるようになったらいつ休みかは知りたい。休みが合わないと出かけにくい。
 
 - 経験
 - 知識
