--- a/shared/respect/尊重.md
+++ b/shared/respect/尊重.md
@@ -361,3 +361,5 @@ https://x.com/ggnka_icha/status/1810274912759918858
 神を敬う習慣のうちどこまでが人のでっちあげたものなのかは判別する必要がある。
 
 神を敬う習慣は人を敬う習慣につながる。
+
+敬意や尊重は社交の一部かも。
