--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -152,3 +152,6 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 
 社交は人と会う中で最低限。
 連絡をこまめに取るとか、社会の一員として周りに迷惑をかけないとか、助け合うとか。
+
+社交のベースとして、円滑なコミュニケーションがある。
+コミュニケーションができなくなったら、つまり、関係が切れたらそれが実現できない。
