--- a/shared/work/動力.md
+++ b/shared/work/動力.md
@@ -1,4 +1,7 @@
-# 影響力
+# Power
+
+動力。
+内から湧き出る力、人を動かす力。
 
 「世界を変える」のが仕事。
 自分、周囲の環境、社会、国際、と範囲は違っても全ては「世界」と言える。
@@ -33,3 +36,10 @@
 人気や人望は影響力に関わってくる。
 
 エネルギーがある、精力的であるというのは、それだけで影響力がある。
+
+仕事をする能力。エネルギー。
+
+エネルギー Energieはドイツ語で、英語だとエナジー Energyの発音が近い。
+
+力学的にはKinetic EnergyとPotential Energyがある。
+実際に働いているエネルギーと、眠っているエネルギーの違い。
