--- a/shared/love/tips/人を好きになる.md
+++ b/shared/love/tips/人を好きになる.md
@@ -15,3 +15,9 @@
 その人の一日を想像して遊んでみる。
 
 人を好きになる前に、人に関心を持つ。
+
+好きになれる要素を聞くために話題を探る。
+
+相手のことがわからなくても、相手が素晴らしい人だろうと期待する。
+
+自分がどんな人を好きなのか、傾向を知っておくことで、自ずと話題も選べる。
