--- a/shared/people/人の要素.md
+++ b/shared/people/人の要素.md
@@ -1,3 +1,30 @@
+## 基本情報
+
+- 名前
+- 性別
+- 年齢
+- 生年月日
+- 出身
+- 住所
+- 言語
+
+## 少しプライベートなこと
+
+- 趣味
+- 特技
+- 家族構成
+- 好きなものや嫌いなもの
+- 好きなことや嫌いなこと
+- 自分の好きなところや嫌いなところ、性格
+
+## さらにプライベートなこと
+
+- 恋人の有無
+- 好きな人のタイプ
+- 性癖やフェチ
+
+## その他
+
 - 感情的な側面（趣味や嗜好）
 - 機能的な側面（用途や目的）
   - 能力的な側面（仕事や特技）
