--- a/shared/intimacy/tips/マッチングアプリ.md
+++ b/shared/intimacy/tips/マッチングアプリ.md
@@ -1,1 +1,11 @@
 自己紹介は身長、体重、自分のことがわかるような写真があるといい。話題も提供する。
+
+出会い系って対人の実験台が無限に手に入るのでは？
+
+詐欺や勧誘には注意。
+
+国内のマッチングアプリはペアーズが一位らしい。
+https://toyokeizai.net/articles/-/693440?page=2
+
+会話を無理に続けようとしない。
+マッチングした時点で「あり」だと思っているので、早めに会う約束をするのが大事。
