--- a/shared/love/愛.md
+++ b/shared/love/愛.md
@@ -956,3 +956,6 @@ loveとgoodの概念は近い。
 愛の前に情、好きの前に興味や注意がある。興味深いものの中でさらに近づきたいものを好きと考える。
 
 好きだから体験を共有して近づきたいのかもしれない。
+
+用事がないと接触しないのは愛がない。
+対象に接触すること自体が目的。
