--- a/shared/risk/リスク.md
+++ b/shared/risk/リスク.md
@@ -184,3 +184,6 @@ VUCAとは逆を目指せばリスクを減らせる。
 「知らなかったほうが幸せ」というのは、幸せなまま死にたいのか、幸せでなくなっても生きたいのかによる。
 
 想像できる程度のことはあまり気にしなくていい。起きてから対処すればいい。むしろ想像できていないことを警戒する。
+
+リスクとダメージは切り分けて考える。
+ダメージコントロールできるなら、致命的ではなくなる。
