--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -155,3 +155,6 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 
 社交のベースとして、円滑なコミュニケーションがある。
 コミュニケーションができなくなったら、つまり、関係が切れたらそれが実現できない。
+
+しばらく連絡してなくて、用事がないと連絡しにくいと思ったら社交が足りてない。
+仕事なら何かしら用事があるから連絡しやすいけど、プライベートだと疎遠になりやすい。
