--- a/shared/engagement/パートナー.md
+++ b/shared/engagement/パートナー.md
@@ -44,3 +44,6 @@
 
 「こういうことがあったら冷める」って人とは付き合えない。愛情とはそういうものではない。
 セフレやペットならいいけど、長期的な関係が望めないならパートナーにはなれない。
+
+必ずしも対等の関係でなくてもいいのかも。
+同じ目的のために役割分担ができていればいい。経営者と労働者とか。
