--- a/shared/life/生殖.md
+++ b/shared/life/生殖.md
@@ -32,3 +32,7 @@
 この三つが必要。
 
 現代では、子供を作るハードルは高いけど、自分や子供が生き残るハードルは下がっている。
+
+生殖は、子供を作るだけじゃなくて、次世代に繋がないといけない。
+
+社員が子供を大学に入れられない会社が大卒を採用するのはフリーライド。潰さないといけない。
