--- a/shared/sex/恋人.md
+++ b/shared/sex/恋人.md
@@ -1,8 +1,6 @@
 # 恋人
 
-Lover.
-
-セックスする友人。
+一緒に子供を作る人。
 
 単にセックスするだけでは恋人とは言えない。
 仕事でセックスすることもある。
@@ -108,3 +106,5 @@ Lover.
 そうでないなら、走って追いかけないといけない。
 
 恋人になる前に社交としてセックスする場合もある。
+
+恋人は子供を育てるという点で同じ目的を共有したパートナーになりうる。
