--- a/shared/life/生殖.md
+++ b/shared/life/生殖.md
@@ -36,3 +36,5 @@
 生殖は、子供を作るだけじゃなくて、次世代に繋がないといけない。
 
 社員が子供を大学に入れられない会社が大卒を採用するのはフリーライド。潰さないといけない。
+
+人類の再生産という点で見れば、平均的に二人で二人以上子供を育てないと足りない。人口が減っていく。
