--- a/shared/people/人の要素.md
+++ b/shared/people/人の要素.md
@@ -25,8 +25,21 @@
 
 ## その他
 
-- 感情的な側面（趣味や嗜好）
-- 機能的な側面（用途や目的）
-  - 能力的な側面（仕事や特技）
-  - 経済的な側面（財産）
-  - 政治的な側面（立場や役割）
+- 客観的な側面
+  - 外見的な側面
+  - 肉体的な側面
+- 主観的な側面
+  - 精神的な側面
+  - 感情的な側面
+    - 趣味
+    - 嗜好
+  - 機能的な側面
+    - 能力的な側面
+      - 仕事
+      - 特技
+- 社会的な側面
+  - 所属
+    - 国籍
+    - 会社
+- 経済的な側面
+  - 財産
