--- a/shared/sex/恋人.md
+++ b/shared/sex/恋人.md
@@ -108,3 +108,6 @@
 恋人になる前に社交としてセックスする場合もある。
 
 恋人は子供を育てるという点で同じ目的を共有したパートナーになりうる。
+
+同性同士はパートナーであっても恋人とは言えないのかも。
+逆に、恋人であってもパートナーではなくペットになることはある。お金も稼がないし子供とも全く関わらないってことはまずないけど。
