--- a/shared/intimacy/友人.md
+++ b/shared/intimacy/友人.md
@@ -201,3 +201,8 @@
 友人から仕事や恋人候補を紹介されることもある。
 
 恋人はわかりやすいけど、友人は結構曖昧なところがある。
+
+友人も恋人みたいに社交より親交が必要。
+
+困った時に助け合うこともあるが、本質ではないと思う。情があれば助け合うこともあるというだけ。
+風邪をひいた時に何か買ってきてもらったり、引っ越しや模様替えを手伝ってもらったり、恋人を紹介してもらったりすることがある。
