--- a/shared/logic/理解.md
+++ b/shared/logic/理解.md
@@ -41,3 +41,5 @@ https://youtu.be/89Kbf7aXMx0?si=oyRo-lWqOFmHSnp4
 
 何かを理解する前に、対象の範囲を規定しないといけない。
 人間は全知ではないし、時間にも限りがある。
+
+理解するには、属性を分けていく。様々な切り口がある。
