--- a/shared/business/自営業.md
+++ b/shared/business/自営業.md
@@ -2,3 +2,7 @@
 
 仕事には報酬があるけど、仕事を探す時間には報酬がない。
 独立して起業したり自営業したりするなら、仕事を探す時間や仲介料をできるだけ減らさないといけない。
+
+仲介業者から仕事をもらって派遣ってのも別に安定した仕事ではない。
+
+単価が高かったら安定してなくても貯蓄はできる。
