--- a/shared/care/配慮.md
+++ b/shared/care/配慮.md
@@ -178,3 +178,5 @@ Careは単に失われないようにするだけで、Entertainmentだけでは
 気配りの基礎は周りに関心を持つことや観察すること。
 
 口や手を出すタイミングが気遣いでは重要。まずリズムを合わせる。
+
+相手を優先するのはいいけど、自分を後回しにしすぎて自分を損なうのはやりすぎ。
