--- a/shared/intimacy/友人.md
+++ b/shared/intimacy/友人.md
@@ -206,3 +206,6 @@
 
 困った時に助け合うこともあるが、本質ではないと思う。情があれば助け合うこともあるというだけ。
 風邪をひいた時に何か買ってきてもらったり、引っ越しや模様替えを手伝ってもらったり、恋人を紹介してもらったりすることがある。
+
+友人と関係が悪化して挨拶もしないし目も合わせないとなると、社交が失敗した状態。
+でもいざとなったら情が湧くような場面もあり、相反する感情が残ることもある。
