--- a/shared/trust/信頼の要素.md
+++ b/shared/trust/信頼の要素.md
@@ -1,3 +1,18 @@
-1. 親しさ intimacy
-2. 確実性 reliability
-3. 真実性 creditability
+## 親近感
+
+物理的な距離と精神的な距離がある。
+
+近くにあって、いざという時にすぐ使えること。
+
+## 確実性
+
+予測可能性。
+結果にブレがない、一貫性がある。安心感、安定感。
+
+予測しやすさのためには情報開示も重要。
+
+## 真実性
+
+過去に実績がある。
+
+期待感と考えるのがいいかも。
