--- a/shared/singing/tips/単調に歌う.md
+++ b/shared/singing/tips/単調に歌う.md
@@ -2,3 +2,5 @@
 どこかを強調するためには、それ以外の部分は単調にしないといけない。
 
 特に声楽では、喉でアクセントやビブラートをかけないように練習する。特に無意識の場合は癖を抜かないといけない。それらは腹で意識的にかけるもの。
+
+腹で意識的に抑揚をつけない限り、単調にならないとおかしい。喉で変なアクセントをつけている場合が多い。
