--- a/shared/trust/期待.md
+++ b/shared/trust/期待.md
@@ -56,3 +56,5 @@ UIに不満を感じたら、何かが「期待通りに動いていない」と
 
 過度な期待は、それを下回ると落胆になる。期待外れになる。
 ただ、過度な期待を裏切っても適切な期待感に調整されるだけで、全くゼロにはならない。
+
+期待を寄せると、重しになって遠ざかることもある。
