--- a/shared/wealth/財産.md
+++ b/shared/wealth/財産.md
@@ -1,4 +1,22 @@
 # Wealth
 
+財産、福祉。
+
 日本人に生まれたこと自体が大きな財産。
 日本は財政的に優れているし、治安もいいし、教育や生活保護のような社会福祉も充実している。
+
+- 財産
+  - 経済的
+    - 貯蓄
+    - 資産
+  - 社会的
+    - 家族
+    - 恋人
+    - 友人
+    - 企業
+      - 福利厚生
+    - 保険
+    - 社会福祉
+      - 国籍
+      - 年金
+      - 生活保護
