--- a/games/五目並べ.md
+++ b/games/五目並べ.md
@@ -40,3 +40,16 @@ _o_
 
 五目並べは詰めろの応酬。相手が正しい手を打たないと負け確になる状態を維持してながら、詰みに持っていく。
 逆に、守る側は詰めろ逃れの詰めろで切り返す。
+
+後手はまず守りで、どこかで切り返さないといけない。
+
+五目並べの守りでは、ただ受けるだけじゃなくて、受けながら相手も絶対に受けないといけない形を作って、攻めの手番を奪う。逆に、攻める時は手番を奪われる攻めはダメ。
+
+五目並べは3個で2、1の形が攻めの基本形。次の一手で3、2になれば、相手に3を止められてももう一つ3が作れる。うまく連鎖すればそのまま連続で相手の手をコントロールできる。そうなると、相手は2、1の段階で早めに受けることになりやすいので、攻めを続けられる。
+
+五目並べは絶対に止めないといけない形を一つずつ覚えていって、それができたら止める、自分の手番ではそれを作れないか狙う。まずはこれが初心者の基本。ミス待ちで勝つ。最低限が、3個並んだ形。1つ飛ばしで3個の場合も見逃さないようにする。
+あとは、基本的な3個で2、1の形を狙っていく。攻めでも守りでも。
+自分が絶対に止めないといけない形を作り続ければ、相手は限られた手しか選べない。それを組み合わせて、より長手数の詰みの形を狙えるようにしていくのが次の段階。逆に守りでもより先を読む。
+
+五目並べの攻めは3個で2,2を作り続けるのが基本。相手は基本的に2手以内で受け続けないといけない。
+その中で良い形になったら4個で3,2を作ったりして相手の守りを崩す。
