--- a/shared/care/tips/関心を示す.md
+++ b/shared/care/tips/関心を示す.md
@@ -52,3 +52,8 @@
 
 くだらない話に関心を払うことで人に関心を払うことができる。
 さっさと本題に入ろうとするのは、その人自身には関心がないことを示してしまう。
+
+プレゼントは「あなたのことがわかっている」と伝えるのが大事。相手の好みやその時に欲しいものを読んで渡す。
+
+理解を示す。
+よく知らないものに関心があるとは言えない。
