--- a/shared/joke/ボケ.md
+++ b/shared/joke/ボケ.md
@@ -165,3 +165,7 @@ https://youtu.be/CCRQb6UxWC8?si=I5Y8SEUZ3IizFffF
 
 わかりづらいボケというか、教養や文化の下地が一致しなかった場合のボケをどうするべきか。
 自分がわからない側なら「え？どういうこと？」でもいいっちゃいい。「わからんわからん！」でもいい。
+
+ボケはボケたのがわかるようにしないといけない。前振りも大事。最悪自分で突っ込む。
+
+ボケなのかマジなのかわかるように、自分の考えも普段から開示しておく。
