--- a/shared/management/maintenance/メンテナンス.md
+++ b/shared/management/maintenance/メンテナンス.md
@@ -1,6 +1,6 @@
 # Maintenance
 
-維持管理。
+保守、維持管理。
 
 資源について、能力を発揮できる状態にすること。
 
@@ -16,3 +16,7 @@
 - 壊れないようにする（パフォーマンスが落ちないようにする）
 
 維持というのは、壊れたものを直す面と、壊れないようにする面がある。壊れるから維持する。
+
+人間の体も資源であり、力を発揮するにはメンテナンスが必要。
+
+修理による保守を続けるためには、部品も必要。外注なら作り続けてもらわらないといけないので、通常のコストとは別にその会社を維持できるだけの費用は最低でも払わないといけない。場合によっては会社ごと買うこともある。
