--- a/shared/management/performance/疲労.md
+++ b/shared/management/performance/疲労.md
@@ -27,3 +27,9 @@
 
 - 体力的、肉体的な疲れ
 - 気力的、精神的な疲れ
+
+正直、連続稼働がどうしても必要な状況は限られているが、連続稼働でなんとかしようとする場合が多い。
+
+疲労というのは結局、連続稼働によるパフォーマンスの低下だ。休みを入れるのが基本。
+
+精神的な疲労がなぜ引き起こされるのか。
