--- a/shared/management/マネジメント.md
+++ b/shared/management/マネジメント.md
@@ -431,3 +431,5 @@ maintenanceやfinanceも含む。
 マネジメントは本番に最も強い瞬間を持ってこないといけない。必死に練習しても故障してはいけないし、故障しなくても弱くてはいけない。
 
 マネジメントは楽そうに見えてないなら失敗している。失敗したマネジメントはやたらとマネジメントが働かないといけない。準備は済んでいて、少し指示するだけで順調に進むのが良いマネジメント。
+
+問題をなんとかする方法としては、とにかく時間や手間をかける方法もある。それもマネジメントではある。でも他の方法を選べるなら避けたほうがいい方法でもある。
