--- a/shared/religion/tips/カルト.md
+++ b/shared/religion/tips/カルト.md
@@ -1,1 +1,5 @@
 「カルト集団の本質は、「一発逆転」です。特別な思想や修行で世の中を大きく変えたり救ったりすれば、凡人からヒーローに一発逆転ってわけです。」（椎名高志）
+
+アブラハムの宗教もカルトでしかない。
+
+日本では宗教に偏見があるというより、アブラハムの宗教みたいなカルトに偏見がある。多神教しか許容してない。
