--- a/shared/war/侵略.md
+++ b/shared/war/侵略.md
@@ -20,3 +20,5 @@
 誰のものでもない自然や土地を自分のもののように占有しようとする人を殺すのは侵略かどうか。
 
 周りから奪い続ける生き方は長続きしない。周りが枯れるともう恩恵を得られない。周りも一緒に伸びていくような生き方であれば、ずっと周りから恩恵を得られる。
+
+侵略の準備を見せた国を侵略するのは防衛か否か。
