--- a/shared/computer/software/development/設計.md
+++ b/shared/computer/software/development/設計.md
@@ -19,3 +19,5 @@ https://zenn.dev/nameless_sn/articles/16_awesome_repos_for_system-design
 
 データというか、インタフェースから考えるとわかりやすい。
 細かい設計では、入出力、データの状態の遷移、最終的な状態、を明確にする。
+
+求められる機能に対して、どういうモデルがあって、どういう機構が必要なのか考えるのが設計。設計中にプロトタイプを製作することも多い。
