--- a/shared/work/機械.md
+++ b/shared/work/機械.md
@@ -6,3 +6,5 @@
 https://ja.wikipedia.org/wiki/%E6%A9%9F%E6%A2%B0
 
 ある力を別の力に変化させる機構が特徴。
+
+コンピュータやその上で動くソフトウェアは機械。機械には機能と機構があって、仕事の文脈でもある。働かないと機械とは言えない。
