--- a/shared/computer/software/development/ソフトウェア開発.md
+++ b/shared/computer/software/development/ソフトウェア開発.md
@@ -218,3 +218,5 @@ https://tech.willgate.co.jp/entry/2024/04/01/184252
 
 ソフトウェア開発はなんらかの仕事を代わりにやってるのが本質。
 人間の代わりに仕事してくれるソフトウェアを作る。注文であったり、事務処理であったり。
+
+ソフトウェア開発という活動と、そこで利用する技術のMAPが必要。範囲が大きい。
