--- a/shared/influence/people/影響力.md
+++ b/shared/influence/people/影響力.md
@@ -8,3 +8,7 @@ influence は effect に比べると間接的。
 影響力とは非公式な権力のこと。
 
 人への影響を生み出すのは力よりも愛。
+
+人に好かれるのも人に影響を与えるパターンのひとつ。
+
+影響力は相手が自ずから変わろうとする力を後押しする。抵抗力が小さくなる。
