--- a/shared/work/機械.md
+++ b/shared/work/機械.md
@@ -8,3 +8,7 @@ https://ja.wikipedia.org/wiki/%E6%A9%9F%E6%A2%B0
 ある力を別の力に変化させる機構が特徴。
 
 コンピュータやその上で動くソフトウェアは機械。機械には機能と機構があって、仕事の文脈でもある。働かないと機械とは言えない。
+
+機械式というと、歯車などの部品の組み合わせだけで、電子制御を伴わない作り。トランジスタとか使って電気信号のやり取りだけで仕掛けを作るのは電子式。
+スイッチだけ電子式だけど、仕掛けの大部分は機械式ということもよくある。車とか。
+機械式は部品が動くので、摩擦というか、擦り減る、摩耗するのが問題。コンピュータでもファンが機械だったりする。水冷ならほとんど摩耗する部品はない。
