--- a/shared/logic/合理性.md
+++ b/shared/logic/合理性.md
@@ -27,3 +27,5 @@
 合理的でないと思ったら、まずは知らない「理由」があると考えるといい。「なんでこうなってるの？」と周りに聞いてみるといい。
 
 「冷静沈着で合理的すぎると思っていた人が一番理屈ではない選択をしているのかもしれない」（『アンサングシンデレラ』）
+
+合理性を追求するよりも、合理的な判断がされなかった理由を分析するべき。
