--- a/shared/influence/影響.md
+++ b/shared/influence/影響.md
@@ -5,6 +5,9 @@
 
 影響、感化。
 
+周囲に影響を与えるのが存在するということ。
+なんの影響も与えなければ、観測もされない。
+
 effect はどちらかというと直接的で「結果」の意味もある。
 influence は間接的で影響を与えるもの。
 影響することそのものがinfluenceで、その結果がeffect.
