--- a/shared/people/人の印象.md
+++ b/shared/people/人の印象.md
@@ -3,9 +3,6 @@
 - 好き / 嫌い
 - 強い / 弱い
 - 美しい / 怪しい
-- 良いところ、好きなところ
-- 悪いところ、嫌いなところ
-  - 直してほしいところ
 - S / M
 - ボケ / ツッコミ
 - 隙がある
@@ -13,7 +10,23 @@
 - かっこいい
 - 優しい / 厳しい
 - 頼もしい
-- 常識的
+- 愛がある
+- 用がある
+- 常識がある
 - 守りたい
 - 穏やか
-- 精神的、感情的に安定 / 不安定
+- 精神的に安定 / 不安定
+- 賢い
+- フットワークが軽い
+- 面白い
+  - よくボケる
+  - よくツッコむ
+- すごい
+- 上に見ている / 下に見ている
+- 人気がある
+
+## より具体的に
+
+- 良いところ、好きなところ
+- 悪いところ、嫌いなところ
+  - 直してほしいところ
