--- a/shared/community/コミュニティ.md
+++ b/shared/community/コミュニティ.md
@@ -151,3 +151,5 @@ business と対立する概念。
 周りの態度が良い状態、空気が良い状態を保つのは全体の利益であり自分の利益でもある。ただ、個人の範疇で空気をよくすることができないとみんな努力をやめてしまう。割れ窓理論と同じ。エンゲージメントが下がる。
 
 コミュニティとエンゲージメントは関係が深い。エンゲージメントが生じるのは、相手の利益が自分の利益になるからだ。
+
+コミュニティを作りたかったら、メンバーには余裕がないといけない。貧乏人は他人に気を遣う余裕もない。
