--- a/shared/cooking/tips/余った食材を使う.md
+++ b/shared/cooking/tips/余った食材を使う.md
@@ -20,3 +20,7 @@
 
 卵は余りがち。
 新鮮じゃなくても使えるレシピが便利。
+
+## ピーマン
+
+ピーマンはペペロンチーノとかトマトソースに入れても全然いい。にんにくとかトマトには普通に合う。それに回鍋肉とか、肉にも合うし。あんま冷凍しない方が美味しいけど、冷凍しても炒め物に使えるくらいの食感は残る。
