--- a/shared/influence/people/人を動かす.md
+++ b/shared/influence/people/人を動かす.md
@@ -1,3 +1,5 @@
+# Influence People
+
 人を動かすのは理よりも情。
 
 人を動かすには、人を知らないといけない。
@@ -34,3 +36,5 @@ SNSなどで間接的に情報を得て影響を受けることもある。
 感動、利益、理屈、信用、信頼、愛情、なんかは人が動くきっかけ。
 
 推し活なんかも人を動かす活動。
+
+- よくツッコむ
