--- a/shared/people/人との関係.md
+++ b/shared/people/人との関係.md
@@ -32,12 +32,15 @@
     - 一緒にやりたいこと
       - 話したいこと
       - 出かけたいところ
-  - 自分を理解してくれるか
-  - 自分を世話してくれるか
 - 相手の態度
   - 丁寧？ぞんざい？
 - 相手が自分をどう思っているか
+  - 自分に関心があるか
+  - 自分を理解しているか
   - 友愛？恋愛？
+- 相手が自分をどう扱うか
+  - 自分を世話してくれるか
+  - 丁寧？ぞんざい？
 - 思い出
   - 嬉しかったこと
   - 悲しかったこと
