--- a/shared/people/人の印象.md
+++ b/shared/people/人の印象.md
@@ -19,11 +19,11 @@
 - 賢い
 - フットワークが軽い
 - 面白い
-  - よくボケる
-  - よくツッコむ
+- ボケ / ツッコミ
 - すごい
 - 上に見ている / 下に見ている
 - 人気がある
+- しっかりしている / ぼんやりしている
 
 ## より具体的に
 
