--- a/shared/work/仕事.md
+++ b/shared/work/仕事.md
@@ -354,3 +354,6 @@ workは意味の文脈、loveは価値の文脈。
 自分の役割や仕事を求めるのはなんでだろう。そうしないと生かされないから？福祉を求めてるのかな？
 
 普通の人になかなかできないからこそ価値がある。供給が少ない。
+
+「壊れていないものは直すな」（エンジニアリングの格言）
+手を加えると壊れる可能性がある。わざわざ壊れていないものを壊す必要はない。
