--- a/shared/war/恨み.md
+++ b/shared/war/恨み.md
@@ -9,3 +9,7 @@
 「戦うのは個人的な怒りや憎しみじゃねえよな？」
 「怪獣の力は、誰かを殺すためにあるんじゃねえ…。人間全員を殺すためにあるんだ」
 『スパロボY』オニジャ
+
+敵を殺す時は、それを殺したことでなくなる恨みと、それを殺したことで生まれる恨みを天秤にかける。
+
+恨みがなくても敵になるなら殺すべき。
