--- a/shared/war/戦争の目的.md
+++ b/shared/war/戦争の目的.md
@@ -17,3 +17,8 @@ Lose-WinをLose-Loseにすること。
 怖くても戦わないといけないと思ったら、戦おうとする。やりすぎてはいけない。「逃げれば追ってこない」と思わせるのがちょうどいい。
 
 「敵対すれば無傷では済まない」、「敵対するべきではない」と思わせるのが戦争の目的。負けてもいい。
+
+戦争というのはただ勝てばいいものではない。争いをなくすことが戦争の終着点。相手に敗北を認めさせて、二度と逆らわないようにしないといけない。
+
+今後の禍根を立つような深い勝ちと、とりあえず目の前の問題をどうにかする暗殺などの浅い勝ちがある。
+使い分けが大事。不世出の天才は暗殺する価値がある。たった一人が希望になっている場合もある。でも誰も彼も暗殺したところで代わりがいたらまた争いが生まれる。
