--- a/shared/war/戦争の目的.md
+++ b/shared/war/戦争の目的.md
@@ -22,3 +22,6 @@ Lose-WinをLose-Loseにすること。
 
 今後の禍根を立つような深い勝ちと、とりあえず目の前の問題をどうにかする暗殺などの浅い勝ちがある。
 使い分けが大事。不世出の天才は暗殺する価値がある。たった一人が希望になっている場合もある。でも誰も彼も暗殺したところで代わりがいたらまた争いが生まれる。
+
+やりすぎて恨みを買ったら、また争いが生まれる。
+やりすぎるくらいなら、完全に殲滅するべき。殲滅できないならやりすぎない。でも恐怖が足りないとやはり争いが生まれる。
