--- a/shared/care/世話.md
+++ b/shared/care/世話.md
@@ -3,3 +3,16 @@
 余裕がないと世話できない。自分で精一杯。
 
 世話は面倒なもの。
+
+- 感情的
+  - 喜ばせる
+    - 好きなものを与える
+      - 好きなものを食べさせる
+  - 楽しませる
+    - 好きなことをさせる
+      - 笑わせる
+- 健康的
+  - 体に良いものを与える
+  - 体に良いことをさせる
+  - 体に悪いものを取り上げる
+  - 体に悪いことをやめさせる
