--- a/shared/wealth/財産.md
+++ b/shared/wealth/財産.md
@@ -1,6 +1,6 @@
 # Wealth
 
-財産、福祉。
+富、財産、福祉。
 
 日本人に生まれたこと自体が大きな財産。
 日本は財政的に優れているし、治安もいいし、教育や生活保護のような社会福祉も充実している。
@@ -20,3 +20,5 @@
       - 国籍
       - 年金
       - 生活保護
+
+富はそもそも貯蓄から来ているので、セーフティネットの役割がある。いざという時の保険。
