--- a/shared/game/theory/守り.md
+++ b/shared/game/theory/守り.md
@@ -30,3 +30,13 @@
 格上と戦うには守りが重要。攻めでは勝てないからこその格上。
 
 受けるだけでは勝てないが、受け潰す、つまり、受けながら相手のリソースを削れば勝てる。
+
+受けが弱いと、攻め以外でリソースを消費してしまって、攻めに回せない。
+
+受けに回る前に先手を取った方が、余計なリソースを消費しづらい。ただ、攻めも罠のリスクはある。
+
+守りのパターン:
+
+- 受け: とにかく相手の攻めで削られないようにする
+- 受け潰し: 攻めを受けながら相手を削る
+- 切り返し: 攻めを切り返して、差し合いに戻したり、攻めに転じたりする
