--- a/shared/game/theory/駆け引き.md
+++ b/shared/game/theory/駆け引き.md
@@ -24,3 +24,7 @@
 まずは一番太い択を見せて、相手の反応を見る。
 
 裏をかかないといけないのは相手の読みが強いときだけ。ただ、相手の読みがどの程度か判断するのは難しい。まずは裏をかくとまではいかなくとも直線的でなく、相手の読みが悪くても情勢が悪くはならない手から選ぶ。
+
+手を選ぶ前に狙いがある。狙いと手が合ってないとリソースが無駄になりやすい。
+
+駆け引きには読み合いも含むけど、その前に情勢の把握と、攻めと守りの切り替え。機会を伺うこと。
