--- a/shared/game/ゲーム.md
+++ b/shared/game/ゲーム.md
@@ -116,3 +116,5 @@ gameはworkと違って、何も変えないこともある。
 
 戦争とゲームの違いはどこにあるか。命がかかってなくても戦争ではある。いや、戦いと争いをまず区別するべきなのかも。
 ゲームは手段というか、戦争の中の戦いの部分のさらに抽象。でも、戦争には争いの面もある。争いがあるから戦いがある。
+
+ゲームには駆け引きがある。
