--- a/shared/business/ビジネス.md
+++ b/shared/business/ビジネス.md
@@ -810,3 +810,5 @@ https://journals.plos.org/complexsystems/article?id=10.1371/journal.pcsy.0000001
 やりたいこととできることが一致するとなお良い。
 
 贈り物をしたり、誰かを喜ばせたりする感覚がビジネスの基礎になる。
+
+社会に受け入れられる、価値を認められるためにビジネスで社会貢献する面もある。
