--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -240,3 +240,5 @@
 誤ちこそがユーモアの基礎。失敗や偏見が人間味になる。もっというと誤ちを認めること、誤ちに目を向けて、臭いものに蓋をしないこと。
 
 「誰かのため」だと思って行動してる人に「あなたがそうしたいんでしょ？」みたいに問いかけるのもユーモア。新たな視点を提供する。
+
+ユーモアはそれ自体よりも知性を感じさせることに意味がある。
