--- a/shared/intelligence/解釈.md
+++ b/shared/intelligence/解釈.md
@@ -4,3 +4,11 @@
 文面通りでなく、裏の意味を考える。
 
 概念、モデリングのあたりとも関連するかも。
+
+どのように解釈したかは、解説することでわかる。
+explanationとinterpretation.
+
+モデリングも名付けが意味づけになる。
+
+なぜそうしないといけないか、なぜそうなるのか。
+何を例えているか、も意味的。
