--- a/shared/people/人を知る.md
+++ b/shared/people/人を知る.md
@@ -164,3 +164,9 @@
 経済的に余裕がない人だとお金のかかるところには誘いづらい。
 
 人の意図を察する、好意とか悪意とか。
+
+そもそも会話より前に、容姿や言動などから相手を知る。
+あとは第三者から聞く噂もありうる。
+
+真似をする。
+モノマネすることを想定して観察する。
