--- a/shared/intimacy/誰かと親しくなる.md
+++ b/shared/intimacy/誰かと親しくなる.md
@@ -199,3 +199,6 @@
 https://www.total-marriage.com/column/1644/
 
 知り合って間もない方が、関係が切れてもダメージが少ない。知り合ってすぐ踏み込む方がいいのかも。
+
+最低でも相手が遠ざからないようにしないと、親しくなろうとしても逃げられる。
+自分のことを嫌っている人とは親しくなれない。
