--- a/shared/lifestyle/cleaning/いらないものを捨てる.md
+++ b/shared/lifestyle/cleaning/いらないものを捨てる.md
@@ -6,3 +6,5 @@
 > 逆に棚とかに眠っている、なかなか「家を散らかすスタメン」にならない物はガチで要らないから捨てまくる。
 >
 > https://x.com/hohop_p/status/1925125242676224132?s=12
+
+もったいなくて捨てられない人は知り合いに譲る手もある。
