--- a/shared/lifestyle/cleaning/収納.md
+++ b/shared/lifestyle/cleaning/収納.md
@@ -14,3 +14,9 @@ A4 の書類入れはだいたい 32cm だ。
 部屋が狭いならベッドの下にしまうのはアリかも。
 
 取り出しにくい場所には、取り出すことが少ないものを入れる。
+
+空間はリソース。
+収納には限界がある。
+
+金があったら収納を大きくする手もあるけど、物が多くなるほど必要な時に取り出すのが難しくなる。工夫が必要。
+空間を節約すれば小さい部屋でも収まる。
