--- a/shared/popular/人に好かれる.md
+++ b/shared/popular/人に好かれる.md
@@ -3,5 +3,12 @@
 - 恩を売る
 - 贈り物をする
 - 自分を知ってもらう
+- 好意を示す
+- 理解を示す
 
 特定の人に好かれたいなら、その人に意見を聞くのもいい。バレたくないなら遠回しに。
+
+自分を好きな人を好きになりやすい。
+
+女性は好意を悪意として受け取ることがあるので注意。
+基本的には好意を示すべきだけど、警戒されないようにする。
