--- a/shared/intimacy/親しさ.md
+++ b/shared/intimacy/親しさ.md
@@ -190,3 +190,5 @@ intimacyは基本的に恋人に対して使われる表現で、友人にはあ
 
 親しくなるということは、相手によって言動が変わるということでもある。
 相手の好みを知って店選びやプレゼントが変わったり、地元が同じならこちらも方言を使ったりする。
+
+仲が良いのと親しいのは同じ？
