--- a/shared/intimacy/誰かと親しくなる.md
+++ b/shared/intimacy/誰かと親しくなる.md
@@ -202,3 +202,6 @@ https://www.total-marriage.com/column/1644/
 
 最低でも相手が遠ざからないようにしないと、親しくなろうとしても逃げられる。
 自分のことを嫌っている人とは親しくなれない。
+
+親しくなるには、親しく接しないといけない。
+近づきすぎて怒られる、を繰り返しながら少しずつ近づく。
