--- a/shared/people/人との関係.md
+++ b/shared/people/人との関係.md
@@ -48,3 +48,37 @@
     - 話したこと
     - 出かけたところ
 - 共通の知り合い
+
+## メモ
+
+照れ屋
+繊細/大雑把
+感情が出やすい
+涙もろい
+怒りっぽい
+よく笑う
+考えがわかりやすい/わかりにくい
+愛情
+尊敬
+競い合っている
+高め合っている
+一緒に何かする
+一緒に食事に行く
+親しくなりたい
+遠ざけたい
+落ち着いている
+謝りたい
+刺激が強い
+反応が薄い
+恋人がいる、いない
+友人がいる、いない
+浮気しがち
+女好き、女嫌い
+男好き、男嫌い
+目立ちたい、目立ちたくない
+恩がある
+情がある
+愛がある
+用がある
+帰属
+仲間
