--- a/shared/cooking/recipes/sweat/酒粕の甘酒を作る.md
+++ b/shared/cooking/recipes/sweat/酒粕の甘酒を作る.md
@@ -10,9 +10,12 @@
 ## 手順
 
 1. 全ての材料を混ぜて火にかける
-2. 酒粕を崩しながら 5 分ほど煮込む
+2. 酒粕が崩れて滑らかになるまで、弱火〜中火で15分ほど煮込む
 
 ## 備考
 
 酒粕の種類によって味や水分量が違う。
-試しに作ってから調整しよう。
+試しに作ってから水を追加して調整しよう。
+
+すりおろした生姜を入れても美味しい。
+砂糖少なめに作って粉末の生姜湯とかでもいい。
