--- a/shared/cooking/tips/肉を冷凍する.md
+++ b/shared/cooking/tips/肉を冷凍する.md
@@ -2,9 +2,8 @@
 
 肉を冷凍したときは日付を書いたほうがいいかも。1週間くらいで食べ切りたい。
 
-ウインナーを冷凍する時はピザやスープに使いやすいように輪切りで冷凍した方が便利。
-丸ごとだと冷凍したまま鍋に入れて後で切るかそのまま食べることになるので面倒。
-
 すぐ食べるなら肉は調理してから冷凍でもいい。
 
 ブロック500gは冷蔵庫で解凍すると半日くらいじゃ溶けない。前日の夜から1日かけて解凍するくらいでいいかも。それか袋に密封して流水に浸ける。
+
+ベーコンは厚切りで、ウインナーはそのままで冷凍しておけば、細切りや輪切りは焼いたり茹でたりしてから切ればいい。細かくしてから冷凍するのはやりすぎ。
