--- a/shared/intimacy/誰かと親しくなる.md
+++ b/shared/intimacy/誰かと親しくなる.md
@@ -1,5 +1,10 @@
 ## 親しくなるまでの過程
 
+親しくなるには近づかないといけない。
+近づかれても害されない、という体験を繰り返すことで親しくなる。
+
+近付いて、何もしない。害を与えられない、という体験の繰り返しが重要。
+
 1. 相手を好きになる
 2. 興味を持ってもらう
 3. 知ってもらう、覚えてもらう
@@ -205,3 +210,7 @@ https://www.total-marriage.com/column/1644/
 
 親しくなるには、親しく接しないといけない。
 近づきすぎて怒られる、を繰り返しながら少しずつ近づく。
+
+相手に好かれていなくても、自分から近づくことはできる。嫌われていなければ近づきすぎて威嚇されるくらいで済む。
+
+相手を害さないためには、相手がされたくないことを知らないといけない。相手にとって何が害になるか。
