--- a/shared/intimacy/親近感.md
+++ b/shared/intimacy/親近感.md
@@ -1,3 +1,12 @@
 # Intimacy
 
 正直、遠方の親友よりも近所の知人のほうが便利。
+
+親近感は気軽さ。近づきやすさ。近づきがたい空気があると声をかけづらいとか、親しくなるにはマイナスがある。
+親しみはないけど、自分が好きになった人にはぐいぐい近づいて、相手からの好感度で押し切るようなタイプもいるので、親近感が全てではないはず。でもそれは親近感がなくても相手が逃げないような長所が必要。容姿とか、特技とか。
+
+親密度と親近感は違う。むしろ親近感があるほど親密にもなりやすい。
+
+親近感があると好感度が高くなりやすい。親近感が先。まだ親しくなくても、まず親近感、親しみがあるといい。
+
+相手から喋りやすくする、気が抜けるようにするのは、親近感。
