--- a/shared/lifestyle/cleaning/収納.md
+++ b/shared/lifestyle/cleaning/収納.md
@@ -20,3 +20,5 @@ A4 の書類入れはだいたい 32cm だ。
 
 金があったら収納を大きくする手もあるけど、物が多くなるほど必要な時に取り出すのが難しくなる。工夫が必要。
 空間を節約すれば小さい部屋でも収まる。
+
+ものが捨てられない人がいるけど、取り出せもしない状態でものをしまい込むのは情があるとは言えない。情というのは「手間をかける」「面倒を見る」のが根底にある。もったいないから捨てられない、というのも自己満足でしかない。もう捨てるべきものなのに捨てないのは、自分の過ちを認められていないだけ。情ではない。
