--- a/shared/mood/勢い.md
+++ b/shared/mood/勢い.md
@@ -11,3 +11,7 @@
 勢いを重視すると、視野が狭くなりやすい。
 
 勢いはworkかも。
+
+勢いは働きの文脈でもいいっちゃいい。
+
+勢いがある時は勢いを止めない方が力をうまく使える。ただ、力が強くても向きが悪いとむしろ悪い方に向かってしまうこともあるし、止まりきれずに崖から落ちることもある。
