--- a/games/Street-Fighter/Six/守りの基本.md
+++ b/games/Street-Fighter/Six/守りの基本.md
@@ -212,3 +212,5 @@ DIを拒否するなら、ジャンプより投げ。もちろん割り込めな
 ただ、それを見越してバクステしてくる場合もあるのでそこは読み合い。
 
 ラグいと特に投げ抜けは危険。
+
+最初は起き上がりジャストパリィを積極的に狙って、いろんなダウンから起き上がりのタイミングに慣れるべき。特に持続を重ねるタイプの起き攻めに見てからジャストパリィを合わせられると便利。
