--- a/shared/intimacy/親近感.md
+++ b/shared/intimacy/親近感.md
@@ -10,3 +10,7 @@
 親近感があると好感度が高くなりやすい。親近感が先。まだ親しくなくても、まず親近感、親しみがあるといい。
 
 相手から喋りやすくする、気が抜けるようにするのは、親近感。
+
+初めから危険そうだと近づきにくい。
+
+女性としては、生理的に無理な男性は妊娠させられると困るので警戒される。
