--- a/shared/love/嫌い.md
+++ b/shared/love/嫌い.md
@@ -12,3 +12,12 @@
 嫌いなら離れればいいけど、危険視しているなら最悪殺さないといけない。特に政治家は日本のどこにいても影響を受けるので、政治活動なんかで選挙に落としたりして徹底的に影響を排除するしかない。
 
 嫌われても恨まれなければ何も起きない。
+
+嫌いなら、遠ざかろうとする。
+
+遠ざかろうとしている兆しは？
+
+- 席を離れる
+- 食器を遠ざける
+- 顔や体を背ける
+- ビンタする
