--- a/shared/communication/メディア.md
+++ b/shared/communication/メディア.md
@@ -30,3 +30,7 @@ Twitter は一つのチャネルだけど、そこに置くツイートの形式
 音楽はメディアというよりコンテンツかも。
 
 テレビとか公的なプラットフォームにはコミュニティノートをつけられるように法整備したほうがいい。
+
+インタビューとか一部のサンプルを切り取っただけでは意見の割合はわからない。
+
+偏向報道するメディアはそもそも情報として定かではない。
